--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>Wilma Open Source / Wilma Documentation</title>
+    <title>Wilma Open Source / Wilma Documentation - THIS PAGE IS UNDER CONSTRUCTION, DO NOT USE IT</title>
 
-    <link rel="stylesheet" href="_static/elstyle.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="static/elstyle.css" type="text/css" />
+    <link rel="stylesheet" href="static/pygments.css" type="text/css" />
 
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
@@ -21,25 +21,13 @@
         HAS_SOURCE:  false
       };
     </script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="shortcut icon" href="_static/favicon.ico"/>
+    <script type="text/javascript" src="static/jquery.js"></script>
+    <script type="text/javascript" src="static/underscore.js"></script>
+    <script type="text/javascript" src="static/doctools.js"></script>
+    <link rel="shortcut icon" href="static/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 </head>
 <body>
-<div class="related">
-    <h3>Navigation</h3>
-    <ul>
-        <li class="right" style="margin-right: 10px">
-            <a href="genindex.html" title="General Index"
-               accesskey="I">index</a></li>
-        <li class="right" >
-            <a href="bingo/index.html" title="Bingo"
-               accesskey="N">next</a> |</li>
-        <li><a href="#">Life Sciences 0.1.0 documentation</a> &raquo;</li>
-    </ul>
-</div>
 
 <div class="document">
     <div class="documentwrapper">
@@ -101,7 +89,7 @@
     <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper"><p class="logo">
             <a href="#">
-                <img class="logo" src="_static/logo.svg" alt="Logo"/>
+                <img class="logo" src="static/logo.svg" alt="Logo"/>
                 <h1 class="logo logo-name">Wilma</h1>
             </a>
         </p>
