--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/logs.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/logs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wilma logs</title>
+<title>Wilma Application Log</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -24,12 +24,12 @@
       </div>
     </div>
   </div>
-    <h1>Wilma logs</h1>
+    <h1>Wilma Application Log</h1>
     <span id="span-version" class="badge badge-info"></span>
     <div class="settings">
       <div class="config-set">
         <fieldset class="form-horizontal">
-        <legend class="message-legend"d>Load information</legend>
+        <legend class="message-legend">Load information</legend>
           <div class="control-group">
            <table>
             <tr>
@@ -42,7 +42,7 @@
             </tr>
            </table>
           </div>
-          <legend>Wilma Log Files</legend>
+          <legend class="message-legend">Wilma application log files</legend>
           <div class="control-group">
             <span class="help-block">Click on a file to download its contents.</span>
           </div>
