--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/messages.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/messages.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wilma message logs</title>
+<title>Wilma Message Logs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <!-- Bootstrap -->
@@ -25,7 +25,7 @@
       </div>
     </div>
   </div>
-    <h1>Wilma message logs</h1>
+    <h1>Wilma Message Logs</h1>
     <span id="span-version" class="badge badge-info"></span>
     <div class="settings">
       <div class="config-set">
@@ -74,7 +74,7 @@
       </div>
       <div class="config-set">
         <fieldset class="form-horizontal">
-          <legend>Message files intercepted by wilma</legend>
+          <legend>Message files intercepted by Wilma</legend>
           <div class="control-group">
             <span class="help-block">Click on a file to download its contents.</span>
           </div>
