--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/readme.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/readme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wilma logs</title>
+<title>Wilma User's Guide</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -24,16 +24,17 @@
         </div>
       </div>
     </div>
-    <h1>Wilma readme</h1>
+    <h1>Wilma User's Guide</h1>
     <span id="span-version" class="badge badge-info"></span>
     <div class="settings">
       <div class="config-set">
         <fieldset class="form-horizontal">
-          <legend>Wilma readme</legend>
+          <legend>Wilma is distributed under license GPL-v3.0</legend>
           <div class="control-group">
             <span class="help-block">Please visit the following page for information about the project:
             <span id="readme"></span>
               </span>
+            <span class="help-block">Please visit Wilma <a href="https://github.com/epam/Wilma">project homepage</a> on GitHub.</span>
           </div>
         </fieldset>
       </div>
