--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wilma stub config page</title>
+<title>Wilma Stub Configuration</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <!-- Bootstrap -->
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-    <h1>Wilma stub config page</h1>
+    <h1>Wilma Stub Configuration</h1>
     <span id="span-version" class="badge badge-info"></span>
     <div class="config-set">
       <h3>Update configuration</h3><br/><br/>
