big amount of updates, end-user part is half ready

--- a/developers/dev_env.html
+++ b/developers/dev_env.html
@@ -11,21 +11,9 @@
 
     <link rel="stylesheet" href="../static/elstyle.css" type="text/css"/>
     <link rel="stylesheet" href="../static/pygments.css" type="text/css"/>
-
-    <script type="text/javascript">
-      var DOCUMENTATION_OPTIONS = {
-        URL_ROOT:    './',
-        VERSION:     '0.1.0',
-        COLLAPSE_INDEX: false,
-        FILE_SUFFIX: '.html',
-        HAS_SOURCE:  false
-      };
-
-    </script>
     <script type="text/javascript" src="../static/jquery.js"></script>
     <script type="text/javascript" src="../static/underscore.js"></script>
-    <script type="text/javascript" src="../static/doctools.js"></script>
-    <link rel="shortcut icon" href="../static/favicon.ico"/>
+    <link id="favicon" rel="shortcut icon" type="image/png" href="../static/icon-wilma.png" />
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 </head>
 <body>
@@ -47,7 +35,7 @@
     <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper"><p class="logo">
             <a href="#">
-                <img class="logo" src="../static/logo.svg" alt="Logo"/>
+                <img class="logo" src="../static/EPAM_LOGO_gray_blue.png" alt="Logo"/>
             </a>
         </p>
 
