--- a/developers/architecture.html
+++ b/developers/architecture.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="../static/jquery.js"></script>
     <script type="text/javascript" src="../static/underscore.js"></script>
     <script type="text/javascript" src="../static/doctools.js"></script>
-    <link rel="shortcut icon" href="../static/favicon.ico"/>
+    <link id="favicon" rel="shortcut icon" type="image/png" href="../static/icon-wilma.png" />
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 </head>
 <body>
@@ -51,7 +51,7 @@
         <div class="sphinxsidebarwrapper">
             <p class="logo">
                 <a href="#">
-                    <img class="logo" src="../static/logo.svg" alt="Logo"/>
+                    <img class="logo" src="../static/EPAM_LOGO_gray_blue.png" alt="Logo"/>
                 </a>
             </p>
 
