another typo fix

--- a/endusers/feature_list.html
+++ b/endusers/feature_list.html
@@ -201,8 +201,8 @@ curl -X POST --data-binary @ExternalConditionChecker.class http://wilma-url:int
                     These data are available on both UIs.</p>
                 <p>Get more information on the load data provided by the applications <a href="https://github.com/epam/Wilma/wiki/Load-Information">here...</a> </p>
 
-                <h2>Shutting down Wilma and Wilma message Search</h2>
-                <p>You can shutdown Wilma by sending a GET/POST request to the '/config/admin/shutdown' URL.</p>
+                <h2>Shutting down Wilma and Wilma Message Search applications</h2>
+                <p>You can shutdown Wilma application by sending a GET/POST request to the '/config/admin/shutdown' URL.</p>
                 <p>You can shutdown Wilma Message Search application by sending a GET/POST request to the '/shutdown' URL.</p>
                 <p>Both cases, killing the application JVM works too ;)</p>
 
