Stabilize SequenceManager.addResponseToSequence method and a small UI change

--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/admin.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/admin.html
@@ -81,13 +81,14 @@
                 </div>
           </div>
           <div class="control-group">
-                <label class="control-label" for="btn-group-onoff-sequence-handling">Sequence handling:</label>
+                <label class="control-label" for="btn-group-onoff-sequence-handling">Sequence handling (Experimental):</label>
                 <div class="controls">
                     <div class="btn-group" id="btn-group-onoff-sequence-handling" data-toggle="buttons-radio">
                         <button class="btn btn-msg" id="btn-sequence-handling-on">On</button>
                         <button class="btn btn-msg" id="btn-sequence-handling-off">Off</button>
                     </div>
                 </div>
+
           </div>
         </fieldset>
       </div>
