minor update to make it Google friendly (SEO changes)

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
 @authors: Tamas Kohegyi
@@ -15,6 +15,11 @@
     <script type="text/javascript" src="static/underscore.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/png" href="static/icon-wilma.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="apple-mobile-web-app-capable" content="YES" />
+    <meta name="author" content="Tamas Kohegyi" />
+    <meta name="Description" content="Wilma is a http/https proxy and stub" />
+    <meta name="Keywords" content="test automation, proxy, stub, wilma" />
 </head>
 <body>
 
