clarifying contacts and name the product more properly

--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
                     </p>
 
                     <p>
-                        See the list of active tickets at <a href="https://github.com/epam/Wilma/issues">GitHub</a>,
-                        and follow us on and contact to us via <a href="https://twitter.com/epam_wilma">Twitter</a>.
+                        See <b>the list of active tickets</b> at <a href="https://github.com/epam/Wilma/issues">GitHub</a>,<br/>
+                        and participate in <a href="https://groups.google.com/forum/#!forum/wilma-users"><b>Wilma-users public mail list</b></a>.
                     </p>
 
                 </div>
