--- a/developers/index.html
+++ b/developers/index.html
@@ -38,7 +38,7 @@
                 <h2>Development History</h2>
                 <p>The development of Wilma was started in the summer of 2013.
                 </p><p>
-                At the end of that year V0.6 become available. It was a fully functional proxy and stub.
+                At the end of that year V0.6 become available. It was a fully functional proxy and service stub.
                 </p><p>
                     In 2014, the following enhancements were added/implemented: interceptors, jar upload handling, wilma-message search enhancements, and V0.7 was created.
             </p><p>
