--- a/endusers/feature_list.html
+++ b/endusers/feature_list.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <h2>Wilma Operation Modes</h2>
-                <p>Wilma can act as pure proxy, can act as pure stub, and can act in mixed mode (use both proxy and stub features).
+                <p>Wilma can act as pure Proxy, can act as pure Service Stub, and can act in mixed mode (use both Proxy and Service Stub features).
                     See details about it <a href="https://github.com/epam/Wilma/wiki/Wilma-Operation-Modes">here...</a>.
                 </p><p>
                     For individual messages, it is also possible to enforce Wilma to ignore the stub settings and enforce working in proxy mode.
