add new config parameter, as preparation of the new release

--- a/endusers/index.html
+++ b/endusers/index.html
@@ -221,6 +221,9 @@ wilma.admin.hosts.file=
 
 # sequence cleaning is executed periodically. Time period can be given with cron expression.
 sequence.cleanup.cron=0 0/03 * * * *
+
+# The maximum value of displayed messages.
+message.log.UI.maxsize=500
 </pre>
                 <p>There are two reserved ports which aren't configurable, 1099 and 2015. Pay attention to not use
                     them.</p>
