--- a/endusers/index.html
+++ b/endusers/index.html
@@ -41,9 +41,9 @@
                 <p>Usually 2 zip files are there: </p>
                 <ul style="list-style-type: square;">
                     <li><b><code>wilma-application-&lt;version&gt;.zip</code></b> that contains everything that's needed to run the
-                        Wilma Application.</li>
+                        <b>Wilma</b> Application.</li>
                     <li><b><code>wilma-message-search-application-&lt;version&gt;.zip</code></b> that contains everything that's needed to run the
-                        Wilma Message Search Application.</li>
+                        <b>Wilma Message Search</b> Application.</li>
                 </ul>
 
                 <p>Example of <b><code>wilma-application-&lt;version&gt;.zip</code></b> (about 33 Mbytes):</p>
@@ -58,15 +58,15 @@
                 </ul>
 
                 <h2>Requirements</h2>
-                <p>Java Runtime Environment 7 is required for running Wilma. (<a
-                        href="http://www.oracle.com/technetwork/java/javase/downloads/jre7-downloads-1880261.html">http://www.oracle.com/technetwork/java/javase/downloads/jre7-downloads-1880261.html</a>)
+                <p>Java Runtime Environment 7 or 8 is required for running <b>Wilma</b>. (<a
+                        href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">http://www.oracle.com/technetwork/java/javase/downloads/index.html</a>)
                 </p>
 
-                <h2>Configuring the tool</h2>
+                <h2>Configuring Wilma</h2>
 
                 <p>After downloading the zip file, unpack its contents to a selected folder.</p>
 
-                <p>To run Wilma it should be configured first in <code>wilma.conf.properties.</code>
+                <p>To <b>run Wilma</b>, it should be configured first in <code>wilma.conf.properties.</code>
                 </p>
 
                 <p>This configuration file must contain the following property entries (the values here are the default
@@ -240,7 +240,7 @@ message.log.UI.maxsize=500
                 </ul>
 
 
-                <h2>Running the tool</h2>
+                <h2>Running Wilma</h2>
 
                 <p>After the configuration is done, you can run Wilma by entering the following command:</p>
                 <code><pre>
@@ -248,21 +248,24 @@ java [-Dlogger=DEV]
      [-Xmx4096m]
      [-Djavax.net.ssl.keyStore=jks_holding_client_certificate]
      [-Djavax.net.ssl.keyStorePassword=password_of_jks]
+     [-Dcom.sun.management.jmxremote.port=jmx_port -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false]
      -jar wilma-&lt;version&gt;.jar wilma.conf.properties
                 </pre></code>
                 <ul>
                     <li>The VM argument <code>-Dlogger=DEV</code> is optional and can be used to log detailed more
                         information on the console.
                     </li>
-                    <li>The VM argument <code>-Xmx</code> specifies the max heap space that Wilma can use. It is
-                        recommended to set it at least to 4096m or even bigger if the load that goes through Wilma is
-                        heavy.
+                    <li>The VM argument <code>-Xmx</code> specifies the max heap space that Wilma can use.
+                        It is recommended to set it based on the measured memory usage that is in connection to the traffic load that goes through Wilma.
+                        It is recommended to use 4G as starting point, and increase it as necessary.
                     </li>
                     <li>The VM argument <code>-Djavax.net.ssl.keyStore</code> specifies the Java Key Store file that
                         holds the client certificates that are needed for two-way SSL. 
                     </li>
                     <li>The VM argument <code>-Djavax.net.ssl.keyStorePassword </code>is the password of the Java Key
                         Store in the previous argument.
+                    </li>
+                    <li>The VM arguments <code>-Dcom.sun.management.jmxremote.XXX </code>are used when you would like to attach to Wilma via Java JMX Console, for monitorig purposes.
                     </li>
                 </ul>
                 <p>Wilma application logs are normally stored in the <strong>/log/app</strong> folder.</p>
@@ -272,12 +275,13 @@ java [-Dlogger=DEV]
                     of the configuration file.
                 <p>If the tool starts successfully, you should see something similar on the console:</p>
                 <code><pre>
-15:24:24 - Timelimit method is used to maintain log files with parameters: timelimit: 1H
-15:24:24 - Wilma-v1.0.1
+11:35:41 - Timelimit method is used to maintain log files with parameters: timelimit: 1H
+11:35:41 - Wilma-v1.1.24
 Copyright 2013-2015 EPAM Systems - GNU GPL-V3.0 License
-Used port: 9092
-Application logs are stored in 'D:\work\tmp\wilapp\log\app' folder.
-Request-response pairs are stored in 'D:\work\tmp\wilapp\messages' folder.
+Used proxy port: 9092
+Wilma UI is available via URL: http://localhost:1234/index/
+Application logs are stored in 'D:\wilma\log\app' folder.
+Request-response pairs are stored in 'D:\wilma\messages' folder.
                     </pre></code>
                 <h2>Loading Stub Configs</h2>
 
@@ -297,7 +301,7 @@ Request-response pairs are stored in 'D:\work\tmp\wilapp\messages' folder.
                         Wilma is not able to work with such pattern!
                     </li>
                 </ol>
-                <h2>Using the tool</h2>
+                <h2>Using Wilma</h2>
                 <p>After Wilma starts, you can use it as an HTTP and HTTPS proxy that logs every request and response
                     that goes through it.</p>
 
@@ -337,6 +341,10 @@ Request-response pairs are stored in 'D:\work\tmp\wilapp\messages' folder.
 
                 <p>The client Java application has to be configured to accept this certificate to be able to access a
                     host that uses SSL.</p>
+
+                <h2>Using Wilma Message Search</h2>
+                <p>Detailed information on how to configure and use <b>Wilma Message Search</b> application can be found <a href="https://github.com/epam/Wilma/wiki/Wilma-Message-Search-Application">here</a>.</p>
+
 
                 <h2>Further information</h2>
 
