review documentation, ensuring that it is up-to-date preparation of next release

--- a/developers/index.html
+++ b/developers/index.html
@@ -19,8 +19,8 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-mobile-web-app-capable" content="YES" />
     <meta name="author" content="Tamas Kohegyi" />
-    <meta name="Description" content="Wilma is a http/https proxy and stub" />
-    <meta name="Keywords" content="test automation, proxy, stub, wilma" />
+    <meta name="Description" content="Wilma is a http/https Transparent Proxy and Service Stub" />
+    <meta name="Keywords" content="test automation, proxy, stub, wilma, microservices" />
 </head>
 <body>
 
@@ -38,13 +38,13 @@
                 <h2>Development History</h2>
                 <p>The development of Wilma was started in the summer of 2013.
                 </p><p>
-                At the end of that year V0.6 become available. It was a fully functional proxy and service stub.
+                At the end of that year V0.6 become available. It was a fully functional transparent proxy and service stub.
                 </p><p>
                     In 2014, the following enhancements were added/implemented: interceptors, jar upload handling, wilma-message search enhancements, and V0.7 was created.
             </p><p>
                     In Jan 2015, some further enhancements were added: message sequence handling, moving from maven to gradle build, internal load measurements, and V0.8 was created.
             </p><p>
-                    In 2015, Wilma V1.0 was created, and it is opened for public use.
+                    In 2015, Wilma V1.0 was created, and it is opened for public use. Since then Wilma got further features and stability improvements, please see the <a href="https://github.com/epam/Wilma/releases">Release Notes page in Github</a> for further details.
             </p>
 
                 <h2>Development Environment</h2>
