--- a/endusers/index.html
+++ b/endusers/index.html
@@ -18,8 +18,8 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-mobile-web-app-capable" content="YES" />
     <meta name="author" content="Tamas Kohegyi" />
-    <meta name="Description" content="Wilma is a http/https proxy and stub" />
-    <meta name="Keywords" content="test automation, proxy, stub, wilma" />
+    <meta name="Description" content="Wilma is a http/https Transparent Proxy and Service Stub" />
+    <meta name="Keywords" content="test automation, proxy, stub, wilma, microservices" />
 </head>
 <body>
 
@@ -222,7 +222,7 @@ wilma.admin.hosts.file=
 # sequence cleaning is executed periodically. Time period can be given with cron expression.
 sequence.cleanup.cron=0 0/03 * * * *
 
-# The maximum value of displayed messages.
+# The maximum number of the listed messages on Wilma UI.
 message.log.UI.maxsize=500
 </pre>
                 <p>There are two reserved ports which aren't configurable, 1099 and 2015. Pay attention to not use
