--- a/introduction.html
+++ b/introduction.html
@@ -18,8 +18,8 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-mobile-web-app-capable" content="YES" />
     <meta name="author" content="Tamas Kohegyi" />
-    <meta name="Description" content="Wilma is a http/https proxy and stub" />
-    <meta name="Keywords" content="test automation, proxy, stub, wilma" />
+    <meta name="Description" content="Wilma is a http/https Transparent Proxy and Service Stub" />
+    <meta name="Keywords" content="test automation, proxy, stub, wilma, microservices" />
 </head>
 <body>
 
@@ -35,12 +35,12 @@
                     <p>For application/component tests, sometimes it is necessary to test a component in a separated environment without the availability of the surrounding components.<br/>
                         In that case we need to emulate the missing components by using stubs.<br/>
                         <p/>
-                        On the other hand sometimes such surrounding components exist, but either buggy, not reliable, or does not provide the expected messages.<br/>
-                        In these situations the connection between the components should be established, and we need to exchange the messages on-the-fly (i.e. instead of proxiing the message, a stub response need to be generated). 
+                        On the other hand sometimes such surrounding components exist, but either buggy, not reliable, or does not provide the expected messages.<br/>
+                        In these situations the connection between the components should be established, and we need to exchange the messages on-the-fly (i.e. instead of proxying the message, a stub response need to be generated).
                     </p>
                     <b>What the tool/product does?</b><br/>
                     <p><ul style="list-style-type: square;">
-                        <li><b>Acts as proxy</b> between components those use http(s) communication. (Even 2-way SSL.)</li>
+                        <li><b>Acts as Transparent Proxy</b> between components those use http(s) communication. (Even 2-way SSL.)</li>
                         <li>Captures, decodes and saves the traffic, and based on the decoded messages, - if that is necessary - it is able to give self-generated answer for a request (i.e. can <b>act as a Stub Service</b>).</li>
                         <li>The stub part is <b>configurable, on-the-fly, </b>to ensure its usage for both automated and manual tests.</li>
                         <li>By using the provided interfaces, <b>product specific expansions</b> (special stub response creators, stub response formatters) can easily be added to the tool.</li>
@@ -50,15 +50,15 @@
                     
                     <b>How it works?</b><br/>
                     <p>As it is a combined proxy and service stub. The component that sends the request to another component, should use Wilma as a simple HTTP/HTTPS proxy. By evaluating the captured request Wilma decides whether need to act as proxy - then simply forward the request to the original target - or need to act as stub - in this case generates a response. <br/>
-                        Configuring its behavior happens via xml config, that can be uploaded (therefore changed) via UI or via service on the fly.</p>
+                        Configuring its behavior happens via xml config, that can be uploaded (therefore changed) via UI or via service on the fly. Wilma can be used as proxy and stub for several components/services in parallel, and can be used in test environment that contains microservices.</p>
                     <b>So how does it help me?</b><br/>
                     <p>Several ways:<br/>
                     <ul style="list-style-type: square;">
-                        <li>in case there is an app that communicates to other components (SOA environment or by simply using 3rd party services) but need to be tested without the availability of other components, Wilma can act as stub. It can be a CI environment too</li>
+                        <li>in case there is an app that communicates to other components (SOA environment or by simply using 3rd party services/microservices) but need to be tested without the availability of other components, Wilma can act as stub. It can be - among others - a local development environmnet or a CI environment</li>
                         <li>in similar case, if some of the components are available but some not, Wilma can stub the missing ones, meanwhile proxying the request to the available components</li>
-                        <li>also if there is a new feature in a 3rd party component, that will be developed later, and not yet available, in case the IF is defined, Wilma can emulate the new feature of the 3rd party component, and the feature in your component can be developed without waiting for the implementation of the feature in the 3rd party component</li>
-                        <li>also it is possible to emulate special behavior of 3rd party components like: timeouts, slow or bad answers, special error answers/error codes - without doing special test environment setup changes, and even if forcing the 3rd party component to produce such special answers would be hard/impossible</li>
-                        <li>also - as it can log the messages - it helps testers/developers to analyse what kind of message transfer has happened between the components (trouble shooting) - also such recorded messages can be used as base of stub responses</li>
+                        <li>also if there is a new feature in a 3rd party component/service, that will be developed later, and not yet available, and if the IF is defined, Wilma can emulate the new feature of the 3rd party component/service, and the feature in your component can be developed without waiting for the implementation of the feature in the 3rd party component/service</li>
+                        <li>also it is possible to emulate special behavior of 3rd party components/services like: timeouts, slow or bad answers, special error answers/error codes - without doing special test environment setup changes, and even if forcing the 3rd party component/service to produce such special answers would be hard/impossible</li>
+                        <li>also - as it can log the messages - it helps testers/developers in troubleshooting, since the logged messages can be analysed - also such recorded messages can be used as base of stub responses</li>
                     </ul>
                     </p>
                     <b>Is it an application or a framework?</b>
@@ -67,14 +67,15 @@
                         <li><b>Wilma</b> application</li>
                         <li><b>Wilma Message Search</b> application</li>
                     </ul><p/>
-                    <b><i>Wilma application</i></b> acts as a proxy between two components those are communicating over HTTP/HTTPS.
-                    It logs the messages, and makes it possible to stub responses based on configuration defined in XML file(s).
+                    <b><i>Wilma application</i></b> acts as a proxy between two components/services those are communicating over HTTP/HTTPS.<br/>
+                    Note: Many components/services can use the same Wilma instance. In optimal case, all components in a test environment use the same Wilma instance.
+                    It logs all the messages, and makes it possible to stub responses based on configuration defined in XML file(s).
                     It can be used/configured immediately. But accepts further add-ons:</p>
                     <ul style="list-style-type: square;">
                         <li>you may create your own class (even jar) to be used during request message evaluation if proxy or stub response should be used (by implementing the necessary condition-checker interface)</li>
                         <li>you may create your own class (even jar) to format/generate stub responses (by implementing the necessary template-formatter interface)</li>
                         <li>you may create your own class (even jar) to intercept and analyse the request/response messages on the fly (by implementing the necessary interceptor interface)</li>
-                        <li>(and yes, everything can be uploaded via UI / service on-the-fly)</li>
+                        <li>and yes, everything can be uploaded via UI / service on-the-fly</li>
                     </ul>
                     <b><i>Wilma Message Search application</i></b> is a high performance search engine, offers searching of the request-response pairs those were logged by Wilma application.<p/>
                     <b>Where I can get further info? </b>
