fix link issues, and upgrade to 2016

--- a/endusers/feature_list.html
+++ b/endusers/feature_list.html
@@ -108,7 +108,7 @@
                 Regarding <b>Operation Mode</b>, you can influence the major behavior of Wilma:
                 <ul style="list-style-type: square;">
                     <li><b>Switch between modes</b>: can be switched between WILMA, PROXY and STUB modes. See more <a href="https://github.com/epam/Wilma/wiki/Wilma-Operation-Modes">here...</a>.</li>
-                    <li><b>Interceptor usage</b>: enabling/disabling message interceptors. See more <a href="https://github.com/epam/Wilma/wiki/Stub-Configuration---Interceptors">here...</a>.</li>
+                    <li><b>Interceptor usage</b>: enabling/disabling message interceptors. See more <a href="https://github.com/epam/Wilma/wiki/Stub-Configuration,-Interceptors">here...</a>.</li>
                     <li><b>Localhost blocking</b>: enabling/disabling Localhost blocking feature, see more <a href="https://github.com/epam/Wilma/wiki/Localhost-Blocking">here...</a>.</li>
                     <li><b>Sequence handling</b>: enabling/disabling the build-in Message Sequence handling. See more <a href="https://github.com/epam/Wilma/wiki/Sequence-Handling">here...</a>.</li>
                 </ul>
@@ -251,7 +251,7 @@ curl -X POST --data-binary @ExternalConditionChecker.class http://wilma-url:int
     <div class="clearer"></div>
 </div>
 <div class="footer">
-    &copy;2015, EPAM Systems.
+    &copy;2016, EPAM Systems.
 </div>
 
 
