--- a/developers/index.html
+++ b/developers/index.html
@@ -44,7 +44,8 @@
             </p><p>
                     In Jan 2015, some further enhancements were added: message sequence handling, moving from maven to gradle build, internal load measurements, and V0.8 was created.
             </p><p>
-                    In 2015, Wilma V1.0 was created, and it is opened for public use. Since then Wilma got further features and stability improvements, please see the <a href="https://github.com/epam/Wilma/releases">Release Notes page in Github</a> for further details.
+                    In 2015, Wilma V1.0 was created, and it is opened for public use.
+                    Since then Wilma got further features and stability improvements, please see the <a href="https://github.com/epam/Wilma/releases">Release Notes page in Github</a> for further details.
             </p>
 
                 <h2>Development Environment</h2>
@@ -95,7 +96,7 @@
     <div class="clearer"></div>
 </div>
 <div class="footer">
-    &copy;2015, EPAM Systems.
+    &copy;2016, EPAM Systems.
 </div>
 
 
