--- a/developers/index.html
+++ b/developers/index.html
@@ -19,8 +19,8 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-mobile-web-app-capable" content="YES" />
     <meta name="author" content="Tamas Kohegyi" />
-    <meta name="Description" content="Wilma is a http/https Transparent Proxy and Service Stub" />
-    <meta name="Keywords" content="test automation, proxy, stub, wilma, microservices" />
+    <meta name="Description" content="Wilma is Service Virtualization tool, a combined http/https Transparent Proxy and Service Stub" />
+    <meta name="Keywords" content="test automation, proxy, stub, wilma, microservices, service virtualization" />
 </head>
 <body>
 
