add more exact contact info

--- a/contact.html
+++ b/contact.html
@@ -42,17 +42,17 @@
                         excellent performance. We hope that our software will be helpful for
                         both developers and testers around the world.
                     </p>
-
                     <p>
                         Wilma application can be used for many purposes, and in many projects. To help all Wilma Users,
                         we encourage you to provide us with feedback, including bug reports and patches, and feedback about
-                        your experience. </p>
-
-                    <p>
-                        Feel free to send us your problems and solutions, suggestions for new features, or even
-                        enterprise support requests, if desired.
+                        your experience.
                     </p>
-
+                    <p>
+                        <b>Feel free to send us your issues and solutions, your suggestions for new features to this <a href="mailto:tamas_kohegyi@epam.com?Subject=[Wilma]" target="_top">e-mail address</a></b>.
+                    </p>
+                    <p>
+                        Should you have <b>enterprise support request</b>, don't hesitate to contact to the mail address above.
+                    </p>
                     <p>
                         See <b>the list of active tickets</b> at <a href="https://github.com/epam/Wilma/issues">GitHub</a>,<br/>
                         and participate in <a href="https://groups.google.com/forum/#!forum/wilma-users"><b>Wilma-users public mail list</b></a>.
